--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,1 +1,3 @@
-EXTRA_DIST =  catalog.fab messier.fab spacefont.txt constellationsmaj.fab name.txt stellarium.ico
+pkgdatadir = $(datadir)/@PACKAGE@/data
+pkgdata_DATA = catalog.fab messier.fab spacefont.txt constellationsmaj.fab name.txt stellarium.ico
+EXTRA_DIST = $(pkgdata_DATA)
