--- a/textures/Makefile
+++ b/textures/Makefile
@@ -57,8 +57,12 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
+host_alias = i686-pc-linux
+host_triplet = i686-pc-linux-gnu
 CC = gcc
+CPP = gcc -E
 CXX = c++
+CXXCPP = c++ -E
 MAKEINFO = makeinfo
 PACKAGE = stellarium
 RANLIB = ranlib
