--- a/textures/Makefile.in
+++ b/textures/Makefile.in
@@ -33,8 +33,6 @@ includedir = @includedir@
 oldincludedir = /usr/include
 
 DESTDIR =
-
-pkgdatadir = $(datadir)/@PACKAGE@
 pkglibdir = $(libdir)/@PACKAGE@
 pkgincludedir = $(includedir)/@PACKAGE@
 
@@ -57,16 +55,24 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
+host_alias = @host_alias@
+host_triplet = @host@
 CC = @CC@
+CPP = @CPP@
 CXX = @CXX@
+CXXCPP = @CXXCPP@
 MAKEINFO = @MAKEINFO@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
 VERSION = @VERSION@
 
-EXTRA_DIST = backmenu.png haloLune.png    m42.png  m98.png Bouton10.png              halo.png        m43.png  m99.png Bouton11.png              headermenu.png  m44.png  mars.png Bouton12.png              horizon3.png    m45.png  mercury.png Bouton13.png              jupiter.png     m46.png  nadir.png Bouton14.png              landscapes      m4.png   neb.png Bouton15.png              lune.png        m51.png  neptune.png Bouton16.png              m100.png        m57.png  n.png Bouton1.png               m101.png        m5.png   pointeur2.png Bouton2.png               m104.png        m63.png  pointeur3.png Bouton3.png               m105.png        m65.png  pointeur4.png Bouton4.png               m13.png         m66.png  pointeur5.png Bouton5.png               m15.png         m76.png  saturneAnneaux128x128.png Bouton6.png               m1.png          m81.png  saturn.png Bouton7.png               m20.png         m82.png  spacefont.png Bouton8.png               m27.png         m83.png  s.png Bouton9.png               m2.png          m84.png  sun.png ciel.png                  m31.png         m87.png  uranus.png e.png                     m33.png         m8.png   venus.png etoile16x162.png          m36.png         m92.png  voielactee256x256.png etoile16x16Aigrettes.png  m37.png         m95.png  w.png etoile16x16.png           m38.png         m96.png  zenith.png etoile32x32.png           m3.png          m97.png
+pkgdatadir = $(datadir)/@PACKAGE@/textures
+pkgdata_DATA = $(wildcard *.png)
+EXTRA_DIST = $(pkgdata_DATA)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_CLEAN_FILES = 
+DATA =  $(pkgdata_DATA)
+
 DIST_COMMON =  Makefile.am Makefile.in
 
 
@@ -83,6 +89,25 @@ Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status $(BUILT_SOURCES)
 	cd $(top_builddir) \
 	  && CONFIG_FILES=$(subdir)/$@ CONFIG_HEADERS= $(SHELL) ./config.status
 
+
+install-pkgdataDATA: $(pkgdata_DATA)
+	@$(NORMAL_INSTALL)
+	$(mkinstalldirs) $(DESTDIR)$(pkgdatadir)
+	@list='$(pkgdata_DATA)'; for p in $$list; do \
+	  if test -f $(srcdir)/$$p; then \
+	    echo " $(INSTALL_DATA) $(srcdir)/$$p $(DESTDIR)$(pkgdatadir)/$$p"; \
+	    $(INSTALL_DATA) $(srcdir)/$$p $(DESTDIR)$(pkgdatadir)/$$p; \
+	  else if test -f $$p; then \
+	    echo " $(INSTALL_DATA) $$p $(DESTDIR)$(pkgdatadir)/$$p"; \
+	    $(INSTALL_DATA) $$p $(DESTDIR)$(pkgdatadir)/$$p; \
+	  fi; fi; \
+	done
+
+uninstall-pkgdataDATA:
+	@$(NORMAL_UNINSTALL)
+	list='$(pkgdata_DATA)'; for p in $$list; do \
+	  rm -f $(DESTDIR)$(pkgdatadir)/$$p; \
+	done
 tags: TAGS
 TAGS:
 
@@ -118,19 +143,20 @@ installcheck: installcheck-am
 install-exec-am:
 install-exec: install-exec-am
 
-install-data-am:
+install-data-am: install-pkgdataDATA
 install-data: install-data-am
 
 install-am: all-am
 	@$(MAKE) $(AM_MAKEFLAGS) install-exec-am install-data-am
 install: install-am
-uninstall-am:
+uninstall-am: uninstall-pkgdataDATA
 uninstall: uninstall-am
-all-am: Makefile
+all-am: Makefile $(DATA)
 all-redirect: all-am
 install-strip:
 	$(MAKE) $(AM_MAKEFLAGS) AM_INSTALL_PROGRAM_FLAGS=-s install
 installdirs:
+	$(mkinstalldirs)  $(DESTDIR)$(pkgdatadir)
 
 
 mostlyclean-generic:
@@ -160,12 +186,12 @@ maintainer-clean-am:  maintainer-clean-generic distclean-am
 
 maintainer-clean: maintainer-clean-am
 
-.PHONY: tags distdir info-am info dvi-am dvi check check-am \
-installcheck-am installcheck install-exec-am install-exec \
-install-data-am install-data install-am install uninstall-am uninstall \
-all-redirect all-am all installdirs mostlyclean-generic \
-distclean-generic clean-generic maintainer-clean-generic clean \
-mostlyclean distclean maintainer-clean
+.PHONY: uninstall-pkgdataDATA install-pkgdataDATA tags distdir info-am \
+info dvi-am dvi check check-am installcheck-am installcheck \
+install-exec-am install-exec install-data-am install-data install-am \
+install uninstall-am uninstall all-redirect all-am all installdirs \
+mostlyclean-generic distclean-generic clean-generic \
+maintainer-clean-generic clean mostlyclean distclean maintainer-clean
 
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
