added hipparcos catalog support

--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -83,7 +83,7 @@ am__quote = @am__quote@
 install_sh = @install_sh@
 
 pkgdatadir = $(datadir)/@PACKAGE@/data
-pkgdata_DATA = catalog.fab messier.fab spacefont.txt constellationsmaj.fab name.txt stellarium.ico
+pkgdata_DATA = hipparcos.dat catalog.fab messier.fab spacefont.txt constellationsmaj.fab name.txt stellarium.ico
 EXTRA_DIST = $(pkgdata_DATA)
 subdir = data
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
