--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,3 +1,3 @@
 pkgdatadir = $(datadir)/@PACKAGE@/data
-pkgdata_DATA = hipparcos.dat messier.fab spacefont.txt constellationship.fab name.fab commonname.fab stellarium.ico
+pkgdata_DATA = hipparcos.fab messier.fab spacefont.txt constellationship.fab name.fab commonname.fab stellarium.ico
 EXTRA_DIST = $(pkgdata_DATA)
