--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -57,12 +57,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_alias = @build_alias@
-build_triplet = @build@
 host_alias = @host_alias@
 host_triplet = @host@
-target_alias = @target_alias@
-target_triplet = @target@
 
 EXEEXT = @EXEEXT@
 OBJEXT = @OBJEXT@
@@ -87,7 +83,7 @@ am__quote = @am__quote@
 install_sh = @install_sh@
 
 pkgdatadir = $(datadir)/@PACKAGE@/data
-pkgdata_DATA = hipparcos.dat messier.fab spacefont.txt constellationship.fab name.fab commonname.fab stellarium.ico
+pkgdata_DATA = hipparcos.fab messier.fab spacefont.txt constellationship.fab name.fab commonname.fab stellarium.ico
 EXTRA_DIST = $(pkgdata_DATA)
 subdir = data
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
