Added man page, removed astrolib.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,3 +1,4 @@
+man_MANS = stellarium.1
 pkgdatadir = $(datadir)/@PACKAGE@/data
 pkgdata_DATA = icon.bmp hipparcos.fab messier.fab spacefont.txt constellationship.fab name.fab commonname.fab stellarium.ico
-EXTRA_DIST = $(pkgdata_DATA)
+EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
