--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -12,6 +12,7 @@ coord_func = sun_special
 lightning = false
 rings = false
 albedo = -1.
+rot_periode = 1.
 
 [mercury]
 name = Mercury
@@ -25,6 +26,10 @@ coord_func = mercury_special
 lightning = true
 rings = false
 albedo = 0.06
+rot_periode = 1407.509405
+rot_rotation_offset = 291.20
+rot_obliquity = 7.01
+rot_equator_ascending_node = 48.42
 
 [venus]
 name = Venus
@@ -38,6 +43,10 @@ coord_func = venus_special
 lightning = true
 rings = false
 albedo = 0.77
+rot_periode = 5832.479839
+rot_rotation_offset = 137.45
+rot_obliquity = 178.78
+rot_equator_ascending_node = 300.22
 
 [earth]
 name = Earth
@@ -51,12 +60,15 @@ coord_func = earth_special
 lightning = true
 rings = false
 albedo = 0.3
+rot_periode = 23.9344694
+rot_rotation_offset = -23.45
+rot_obliquity = 280.5
 
 [moon]
 name = Moon
 parent = Earth
 radius = 1738.
-halo = true
+halo = false
 color = 1.,1.,1.
 tex_map = lune
 tex_halo = star16x16
@@ -64,6 +76,9 @@ coord_func = lunar_special
 lightning = true
 rings = false
 albedo = 0.12
+rot_periode = 655.71986
+rot_rotation_offset = 308
+rot_obliquity = 23.45
 
 [mars]
 name = Mars
@@ -77,6 +92,9 @@ coord_func = mars_special
 lightning = true
 rings = false
 albedo = 0.150
+rot_rotation_offset = 136.005
+rot_obliquity = 26.72
+rot_equator_ascending_node = 82.91
 
 [jupiter]
 name = Jupiter
@@ -90,6 +108,10 @@ coord_func = jupiter_special
 lightning = true
 rings = false
 albedo = 0.51
+rot_periode = 9.927953
+rot_rotation_offset = 16
+rot_obliquity = 2.222461
+rot_equator_ascending_node = -22.203
 
 [io]
 name = Io
@@ -102,6 +124,8 @@ tex_halo = star16x16
 lightning = true
 rings = false
 albedo = 0.61
+rot_rotation_offset = 220.8
+rot_obliquity = 0.0
 coord_func = ell_orbit
 orbit_Epoch = 2443000.00038375
 orbit_Period = 1.769138
@@ -111,6 +135,7 @@ orbit_Inclination = 0.040
 orbit_AscendingNode = 312.981
 orbit_LongOfPericenter = 97.735
 orbit_MeanLongitude = 106.724
+
 
 [europa]
 name = Europa
@@ -123,6 +148,8 @@ tex_halo = star16x16
 lightning = true
 rings = false
 albedo = 0.64
+rot_obliquity = 0.0
+rot_rotation_offset = 56.2
 coord_func = ell_orbit
 orbit_Epoch = 2443000.00038375
 orbit_Period = 3.551810
@@ -144,6 +171,9 @@ tex_halo = star16x16
 lightning = true
 rings = false
 albedo = 0.42
+rot_rotation_offset = 262.1
+rot_obliquity = 0.1
+rot_equator_ascending_node = 161.6
 coord_func = ell_orbit
 orbit_Epoch = 2443000.00038375
 orbit_Period = 7.154553
@@ -153,6 +183,7 @@ orbit_Inclination = 0.195
 orbit_AscendingNode = 119.841
 orbit_LongOfPericenter = 188.831
 orbit_MeanLongitude = 121.206
+
 
 [callisto]
 name = Callisto
@@ -165,6 +196,9 @@ tex_halo = star16x16
 lightning = true
 rings = false
 albedo = 0.20
+rot_rotation_offset = 120.1
+rot_obliquity = 0.4
+rot_equator_ascending_node = 160.6
 coord_func = ell_orbit
 orbit_Epoch = 2443000.00038375
 orbit_Period = 16.689018
@@ -191,6 +225,11 @@ ring_size = 140000.
 tex_ring = saturn_rings
 rings = false
 albedo = 0.50
+rot_periode = 10.65622
+rot_rotation_offset = 358.922
+rot_obliquity = 28.049
+rot_equator_ascending_node = 169.530
+
 
 [titan]
 name = Titan
@@ -203,6 +242,9 @@ tex_halo = star16x16
 lightning = true
 rings = false
 albedo = 0.21
+rot_rotation_offset = 318.9
+rot_obliquity = 0.6
+rot_equator_ascending_node = 186.6
 coord_func = ell_orbit
 orbit_Epoch = 2451545.0
 orbit_Period = 15.945421
@@ -212,6 +254,7 @@ orbit_Inclination = 0.33
 orbit_AscendingNode = 0
 orbit_LongOfPericenter = 0
 orbit_MeanLongitude = 120
+
 
 [uranus]
 name = Uranus
@@ -225,6 +268,11 @@ coord_func = uranus_special
 lightning = true
 rings = false
 albedo = 0.66
+rot_periode = 17.24
+rot_rotation_offset = 331.18
+rot_obliquity = 97.81
+rot_equator_ascending_node = 167.76
+
 
 [neptune]
 name = Neptune
@@ -238,6 +286,11 @@ coord_func = neptune_special
 lightning = true
 rings = false
 albedo = 0.62
+rot_periode = 16.11
+rot_rotation_offset = 228.65
+rot_obliquity = 28.03
+rot_equator_ascending_node = 49.235
+
 
 [pluto]
 name = Pluto
@@ -251,6 +304,11 @@ coord_func = pluto_special
 lightning = true
 rings = false
 albedo = 0.55
+rot_periode = 153.293904
+rot_rotation_offset = 320.75
+rot_obliquity = 115.60
+rot_equator_ascending_node = 228.34
+
 
 [charon]
 name = Charon
@@ -263,6 +321,9 @@ tex_halo = star16x16
 lightning = true
 rings = false
 albedo = 0.35
+rot_rotation_offset = 213.3
+rot_obliquity = 1.0
+rot_equator_ascending_node = 287.6
 coord_func = ell_orbit
 orbit_Epoch = 2451545.0
 orbit_Period = 6.387246
