Fixed a lot of displaying issues for planets.

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -61,8 +61,8 @@ lightning = true
 rings = false
 albedo = 0.3
 rot_periode = 23.9344694
-rot_rotation_offset = -23.45
-rot_obliquity = 280.5
+rot_rotation_offset = 280.5
+rot_obliquity = 23.438855
 
 [moon]
 name = Moon
@@ -85,7 +85,7 @@ name = Mars
 parent = Sun
 radius = 3394.
 halo = true
-color = 1.,1.,1.
+color = 1.2,0.7,0.7
 tex_map = mars
 tex_halo = star16x16
 coord_func = mars_special
