--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,4 +1,4 @@
 man_MANS = stellarium.1
 pkgdatadir = $(datadir)/@PACKAGE@/data
-pkgdata_DATA = icon.bmp hipparcos.fab messier.fab spacefont.txt courierfont.txt constellationship.fab name.fab ssystem.ini commonname.fab stellarium.ico landscapes.ini
+pkgdata_DATA = icon.bmp hipparcos.fab messier.fab spacefont.txt courierfont.txt constellationship.fab name.fab ssystem.ini commonname.fab stellarium.ico landscapes.ini constellationsart.fab files_format.txt
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
