Fixed planet color bug and planets data.

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -18,7 +18,7 @@ name = Mercury
 parent = Sun
 radius = 2439.7
 halo = true
-color = 1.,1.,1.
+color = 0.9,0.8,0.8
 tex_map = mercury
 tex_halo = star16x16
 coord_func = mercury_special
@@ -34,7 +34,7 @@ name = Venus
 parent = Sun
 radius = 6052.
 halo = true
-color = 1.,1.,1.
+color = 1.,1.,0.8
 tex_map = venus
 tex_halo = star16x16
 coord_func = venus_special
@@ -50,7 +50,7 @@ name = Earth
 parent = Sun
 radius = 6378.1
 halo = true
-color = 1.,1.,1.
+color = 0.7,0.8,1.2
 tex_map = earthmap
 tex_halo = star16x16
 coord_func = earth_special
@@ -95,7 +95,7 @@ name = Jupiter
 parent = Sun
 radius = 71398.
 halo = true
-color = 1.,1.,1.
+color = 0.8,0.9,1.0
 tex_map = jupiter
 tex_halo = star16x16
 coord_func = jupiter_special
@@ -111,7 +111,7 @@ name = Io
 parent = Jupiter
 radius = 1821.
 halo = true
-color = 1.,1.,1.
+color = 1.,.8,.7
 tex_map = io
 tex_halo = star16x16
 lightning = true
@@ -204,7 +204,7 @@ name = Saturn
 parent = Sun
 radius = 60330.
 halo = true
-color = 1.,1.,1.
+color = 1.,1.,0.85
 tex_map = saturn
 tex_halo = star16x16
 coord_func = saturn_special
@@ -248,7 +248,7 @@ name = Uranus
 parent = Sun
 radius = 26200.
 halo = true
-color = 1.,1.,1.
+color = 0.75,0.95,1.
 tex_map = uranus
 tex_halo = star16x16
 coord_func = uranus_special
@@ -265,7 +265,7 @@ name = Neptune
 parent = Sun
 radius = 25225.
 halo = true
-color = 1.,1.,1.
+color = 0.75,0.75,1.
 tex_map = neptune
 tex_halo = star16x16
 coord_func = neptune_special
