Fixed bugs. Improved landscape in fisheye mode.

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -3,11 +3,11 @@ name = Sun
 parent = none
 radius = 696000.
 halo = false
-big_halo = true
 color = 1.,1.,0.8
 tex_map = sun
 tex_halo = NULL
-tex_big_halo = sun_halo
+tex_big_halo = halo
+big_halo_size = 200
 coord_func = sun_special
 lightning = false
 albedo = -1.
