Almost done with the light bug in Fisheye mode!!

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -217,7 +217,7 @@ rot_periode = 10.65622
 rot_rotation_offset = 358.922
 rot_obliquity = 28.049
 rot_equator_ascending_node = 169.530
-
+lightning = true
 
 [titan]
 name = Titan
