Made the object mouse selection more clever.

--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -26,3 +26,9 @@ name = Palm
 type = fisheye
 maptex = landscapes/horizonalpha512
 texturefov = 210
+
+[trees]
+name = Trees
+type = fisheye
+maptex = landscapes/trees_512
+texturefov = 180
