Added bad widget and plannified future user interface.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,4 +1,4 @@
 man_MANS = stellarium.1
 pkgdatadir = $(datadir)/@PACKAGE@/data
-pkgdata_DATA = icon.bmp hipparcos.fab messier.fab spacefont.txt courierfont.txt constellationship.fab name.fab ssystem.ini commonname.fab stellarium.ico landscapes.ini constellationsart.fab files_format.txt zone.tab
+pkgdata_DATA = icon.bmp hipparcos.fab messier.fab spacefont.txt courierfont.txt constellationship.fab name.fab ssystem.ini commonname.fab stellarium.ico landscapes.ini constellationsart.fab files_format.txt zone.tab script_load_config script_save_config script_set_locale script_set_system_time script_set_time_zone
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
