Fixed minor bugs for dome version.

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -181,7 +181,7 @@ parent = Jupiter
 radius = 2403.
 halo = true
 color = 1.,1.,1.
-tex_map = europa
+tex_map = callisto
 tex_halo = star16x16
 lightning = true
 albedo = 0.20
