Added Rob Spearman modifs, Inculded a patch for screen shot feature, continued GUI and fixed many bugs.

--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -26,3 +26,9 @@ name = Trees
 type = fisheye
 maptex = landscapes/trees_512
 texturefov = 210
+
+[forest]
+name = Forest
+type = fisheye
+maptex = landscapes/forest
+texturefov = 190
