First pass at planet orbits feature

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -28,6 +28,7 @@ rot_periode = 1407.509405
 rot_rotation_offset = 291.20
 rot_obliquity = 7.01
 rot_equator_ascending_node = 48.42
+sidereal_period = 87.97
 
 [venus]
 name = Venus
@@ -44,6 +45,7 @@ rot_periode = 5832.479839
 rot_rotation_offset = 137.45
 rot_obliquity = -178.78
 rot_equator_ascending_node = 300.22
+sidereal_period = 224.70
 
 [earth]
 name = Earth
@@ -89,6 +91,7 @@ albedo = 0.150
 rot_rotation_offset = 136.005
 rot_obliquity = 26.72
 rot_equator_ascending_node = 82.91
+sidereal_period = 686.98
 
 [jupiter]
 name = Jupiter
@@ -105,6 +108,7 @@ rot_periode = 9.927953
 rot_rotation_offset = 16
 rot_obliquity = 2.222461
 rot_equator_ascending_node = -22.203
+sidereal_period = 4331.87
 
 [io]
 name = Io
@@ -218,6 +222,7 @@ rot_rotation_offset = 358.922
 rot_obliquity = 28.049
 rot_equator_ascending_node = 169.530
 lightning = true
+sidereal_period = 10760
 
 [titan]
 name = Titan
@@ -258,7 +263,7 @@ rot_periode = 17.24
 rot_rotation_offset = 331.18
 rot_obliquity = -97.81
 rot_equator_ascending_node = 167.76
-
+sidereal_period = 30685
 
 [neptune]
 name = Neptune
@@ -275,7 +280,7 @@ rot_periode = 16.11
 rot_rotation_offset = 228.65
 rot_obliquity = 28.03
 rot_equator_ascending_node = 49.235
-
+sidereal_period = 60189
 
 [pluto]
 name = Pluto
@@ -292,7 +297,7 @@ rot_periode = 153.293904
 rot_rotation_offset = 320.75
 rot_obliquity = -115.60
 rot_equator_ascending_node = 228.34
-
+sidereal_period = 90797
 
 [charon]
 name = Charon
