More accurate orbits for Galilean moons

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -122,16 +122,7 @@ lightning = true
 albedo = 0.61
 rot_rotation_offset = 220.8
 rot_obliquity = 0.0
-coord_func = ell_orbit
-orbit_Epoch = 2443000.00038375
-orbit_Period = 1.769138
-orbit_SemiMajorAxis = 421600
-orbit_Eccentricity = 0.0041
-orbit_Inclination = 0.040
-orbit_AscendingNode = 312.981
-orbit_LongOfPericenter = 97.735
-orbit_MeanLongitude = 106.724
-
+coord_func = io_special
 
 [europa]
 name = Europa
@@ -145,15 +136,7 @@ lightning = true
 albedo = 0.64
 rot_obliquity = 0.0
 rot_rotation_offset = 56.2
-coord_func = ell_orbit
-orbit_Epoch = 2443000.00038375
-orbit_Period = 3.551810
-orbit_SemiMajorAxis = 670900
-orbit_Eccentricity = 0.0101
-orbit_Inclination = 0.470
-orbit_AscendingNode = 101.087
-orbit_LongOfPericenter = 155.512
-orbit_MeanLongitude = 176.377
+coord_func = europa_special
 
 [ganymede]
 name = Ganymede
@@ -168,16 +151,7 @@ albedo = 0.42
 rot_rotation_offset = 262.1
 rot_obliquity = 0.1
 rot_equator_ascending_node = 161.6
-coord_func = ell_orbit
-orbit_Epoch = 2443000.00038375
-orbit_Period = 7.154553
-orbit_SemiMajorAxis = 1070000
-orbit_Eccentricity = 0.0015
-orbit_Inclination = 0.195
-orbit_AscendingNode = 119.841
-orbit_LongOfPericenter = 188.831
-orbit_MeanLongitude = 121.206
-
+coord_func = ganymede_special
 
 [callisto]
 name = Callisto
@@ -192,16 +166,7 @@ albedo = 0.20
 rot_rotation_offset = 120.1
 rot_obliquity = 0.4
 rot_equator_ascending_node = 160.6
-coord_func = ell_orbit
-orbit_Epoch = 2443000.00038375
-orbit_Period = 16.689018
-orbit_SemiMajorAxis = 1883000
-orbit_Eccentricity = 0.007
-orbit_Inclination = 0.281
-orbit_AscendingNode = 323.265
-orbit_LongOfPericenter = 335.933
-orbit_MeanLongitude = 85.091
-
+coord_func = calisto_special
 
 [saturn]
 name = Saturn
