Rotation ascending node now used for better planet orientation accuracy

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -27,7 +27,7 @@ albedo = 0.06
 rot_periode = 1407.509405
 rot_rotation_offset = 291.20
 rot_obliquity = 7.01
-rot_equator_ascending_node = 48.42
+#rot_equator_ascending_node = 48.42
 sidereal_period = 87.97
 
 [venus]
@@ -44,7 +44,7 @@ albedo = 0.77
 rot_periode = 5832.479839
 rot_rotation_offset = 137.45
 rot_obliquity = -178.78
-rot_equator_ascending_node = 300.22
+#rot_equator_ascending_node = 300.22
 sidereal_period = 224.70
 
 [earth]
@@ -90,7 +90,7 @@ lightning = true
 albedo = 0.150
 rot_rotation_offset = 136.005
 rot_obliquity = 26.72
-rot_equator_ascending_node = 82.91
+rot_equator_ascending_node = -82.91
 sidereal_period = 686.98
 
 [jupiter]
@@ -105,7 +105,7 @@ coord_func = jupiter_special
 lightning = true
 albedo = 0.51
 rot_periode = 9.927953
-rot_rotation_offset = 16
+rot_rotation_offset = 151
 rot_obliquity = 2.222461
 rot_equator_ascending_node = -22.203
 sidereal_period = 4331.87
@@ -150,7 +150,7 @@ lightning = true
 albedo = 0.42
 rot_rotation_offset = 262.1
 rot_obliquity = 0.1
-rot_equator_ascending_node = 161.6
+#rot_equator_ascending_node = 161.6
 coord_func = ganymede_special
 
 [callisto]
@@ -165,7 +165,7 @@ lightning = true
 albedo = 0.20
 rot_rotation_offset = 120.1
 rot_obliquity = 0.4
-rot_equator_ascending_node = 160.6
+#rot_equator_ascending_node = 160.6
 coord_func = calisto_special
 
 [saturn]
@@ -185,7 +185,7 @@ albedo = 0.50
 rot_periode = 10.65622
 rot_rotation_offset = 358.922
 rot_obliquity = 28.049
-rot_equator_ascending_node = 169.530
+#rot_equator_ascending_node = 169.530
 lightning = true
 sidereal_period = 10760
 
@@ -201,7 +201,7 @@ lightning = true
 albedo = 0.21
 rot_rotation_offset = 318.9
 rot_obliquity = 0.6
-rot_equator_ascending_node = 186.6
+#rot_equator_ascending_node = 186.6
 coord_func = ell_orbit
 orbit_Epoch = 2451545.0
 orbit_Period = 15.945421
@@ -227,7 +227,7 @@ albedo = 0.66
 rot_periode = 17.24
 rot_rotation_offset = 331.18
 rot_obliquity = -97.81
-rot_equator_ascending_node = 167.76
+#rot_equator_ascending_node = 167.76
 sidereal_period = 30685
 
 [neptune]
@@ -244,7 +244,8 @@ albedo = 0.62
 rot_periode = 16.11
 rot_rotation_offset = 228.65
 rot_obliquity = 28.03
-rot_equator_ascending_node = 49.235
+rot_equator_ascending_node = 180
+#49.235
 sidereal_period = 60189
 
 [pluto]
@@ -261,7 +262,7 @@ albedo = 0.55
 rot_periode = 153.293904
 rot_rotation_offset = 320.75
 rot_obliquity = -115.60
-rot_equator_ascending_node = 228.34
+#rot_equator_ascending_node = 228.34
 sidereal_period = 90797
 
 [charon]
@@ -276,7 +277,7 @@ lightning = true
 albedo = 0.35
 rot_rotation_offset = 213.3
 rot_obliquity = 1.0
-rot_equator_ascending_node = 287.6
+#rot_equator_ascending_node = 287.6
 coord_func = ell_orbit
 orbit_Epoch = 2451545.0
 orbit_Period = 6.387246
