Improved landscape displaying, fixed guereins textures.

--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -26,23 +26,23 @@ fog_angle_shift = -6
 name = Guereins
 type = old_style
 nbsidetex = 8
-tex0 = landscapes/guereins1
-tex1 = landscapes/guereins2
-tex2 = landscapes/guereins3
-tex3 = landscapes/guereins4
-tex4 = landscapes/guereins5
-tex5 = landscapes/guereins6
-tex6 = landscapes/guereins7
-tex7 = landscapes/guereins8
+tex0 = landscapes/guereins4
+tex1 = landscapes/guereins5
+tex2 = landscapes/guereins6
+tex3 = landscapes/guereins7
+tex4 = landscapes/guereins8
+tex5 = landscapes/guereins1
+tex6 = landscapes/guereins2
+tex7 = landscapes/guereins3
 nbside = 8
-side0 = tex0:0:0:1:1
-side1 = tex1:0:0:1:1
-side2 = tex2:0:0:1:1
-side3 = tex3:0:0:1:1
-side4 = tex4:0:0:1:1
-side5 = tex5:0:0:1:1
-side6 = tex6:0:0:1:1
-side7 = tex7:0:0:1:1
+side0 = tex0:0:0.005:1:1
+side1 = tex1:0:0.005:1:1
+side2 = tex2:0:0.005:1:1
+side3 = tex3:0:0.005:1:1
+side4 = tex4:0:0.005:1:1
+side5 = tex5:0:0.005:1:1
+side6 = tex6:0:0.005:1:1
+side7 = tex7:0:0.005:1:1
 groundtex = landscapes/guereinsb
 ground = groundtex:0:0:1:1
 fogtex = fog
@@ -50,7 +50,9 @@ fog = fogtex:0:0:1:1
 nb_decor_repeat = 1
 decor_alt_angle = 40
 decor_angle_shift = -22
+decor_angle_rotatez = 0
 ground_angle_shift = -21
+ground_angle_rotatez = 10
 fog_alt_angle = 20
 fog_angle_shift = -3
 
