Fixed landscape ground display.

--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -21,6 +21,7 @@ decor_angle_shift = -2
 ground_angle_shift = -0.1
 fog_alt_angle = 20
 fog_angle_shift = -6
+draw_ground_first = 0
 
 [Guereins]
 name = Guereins
@@ -51,10 +52,11 @@ nb_decor_repeat = 1
 decor_alt_angle = 40
 decor_angle_shift = -22
 decor_angle_rotatez = 0
-ground_angle_shift = -21
-ground_angle_rotatez = 10
+ground_angle_shift = -22
+ground_angle_rotatez = 45
 fog_alt_angle = 20
 fog_angle_shift = -3
+draw_ground_first = 1
 
 [trees]
 name = Trees
