Fixed many autoconf problems for installation, improved png compression.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,4 +1,5 @@
 man_MANS = stellarium.1
 pkgdatadir = $(datadir)/@PACKAGE@/data
-pkgdata_DATA = icon.bmp hipparcos.fab messier.fab spacefont.txt courierfont.txt constellationship.fab name.fab ssystem.ini commonname.fab stellarium.ico landscapes.ini constellationsart.fab files_format.txt zone.tab script_load_config script_save_config script_set_locale script_set_time_zone
+pkgdata_DATA = commonname.fab icon.bmp star_names.haw.fab constellationsart.fab landscapes.ini planet_names.eng.fab constellationship.fab planet_names.esl.fab skycultures.fab stellarium.ico planet_names.fra.fab spacefont.txt zone.tab courierfont.txt planet_names.haw.fab ssystem.ini star_names.eng.fab files_format.txt messier.fab star_names.esl.fab hipparcos.fab name.fab star_names.fra.fab
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
+SUBDIRS = sky_cultures
