--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -69,3 +69,28 @@ name = Forest
 type = fisheye
 maptex = landscapes/forest
 texturefov = 190
+
+[snowy]
+name = Snowy
+type = old_style
+nbsidetex = 4
+tex0 = landscapes/snowy1
+tex1 = landscapes/snowy2
+tex2 = landscapes/snowy3
+tex3 = landscapes/snowy4
+nbside = 4
+side0 = tex0:0:0:1:0.6
+side1 = tex1:0:0:1:0.6
+side2 = tex2:0:0:1:0.6
+side3 = tex3:0:0:1:0.6
+groundtex = landscapes/snowy5
+ground = groundtex:0:0:1:1
+fogtex = fog
+fog = fogtex:0:0:1:1
+nb_decor_repeat = 3
+decor_alt_angle = 15
+decor_angle_shift = -2
+ground_angle_shift = -0.1
+fog_alt_angle = 20
+fog_angle_shift = -6
+draw_ground_first = 1
