Continued gettext integration. Started to clean all the code related to internationalization end sky cultures. Fixed some config file versions update bugs. Added a parameter to set the maximum FPS limit.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,1 +1,12 @@
 src/main.cpp
+src/draw.cpp
+src/constellation.cpp
+src/constellation_mgr.cpp
+src/hip_star.cpp
+src/hip_star_mgr.cpp
+src/landscape.cpp
+src/nebula.cpp
+src/nebula_mgr.cpp
+src/observator.cpp
+src/planet.cpp
+src/sky_localizer.cpp
