Added new planets satellites. Fixed an internationnalisation bug for planets names!!!

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -93,6 +93,52 @@ rot_obliquity = 26.72
 rot_equator_ascending_node = -82.91
 sidereal_period = 686.98
 
+[phobos]
+name = Phobos
+parent = Mars
+radius = 22.2
+halo = true 
+color = 1.,1.,1. 
+tex_map = phoebos 
+tex_halo = star16x16 
+lightning = true 
+albedo = 0.06 
+rot_rotation_offset = 318.9 
+rot_obliquity = 0.6 
+#rot_equator_ascending_node = 186.6 
+coord_func = ell_orbit 
+orbit_Epoch = 2451545.0 
+orbit_Period = 0.31891 
+orbit_SemiMajorAxis = 9380 
+orbit_Eccentricity = 0.0151 
+orbit_Inclination = 1.08 
+orbit_AscendingNode = 164.931 
+orbit_LongOfPericenter = 2.262 
+orbit_MeanLongitude = 317.724 
+
+[deimos] 
+name = Deimos 
+parent = Mars 
+radius = 12.6 
+halo = true 
+color = 1.,1.,1. 
+tex_map = deimos 
+tex_halo = star16x16 
+lightning = true 
+albedo = 0.21 
+rot_rotation_offset = 318.9 
+rot_obliquity = 0.6 
+#rot_equator_ascending_node = 186.6 
+coord_func = ell_orbit 
+orbit_Epoch = 2451545.0 
+orbit_Period = 15.945421 
+orbit_SemiMajorAxis = 23460 
+orbit_Eccentricity = 0.0002 
+orbit_Inclination = 1.793 
+orbit_AscendingNode = 339.600 
+orbit_LongOfPericenter = 0 
+orbit_MeanLongitude = 120 
+
 [jupiter]
 name = Jupiter
 parent = Sun
@@ -212,6 +258,51 @@ orbit_AscendingNode = 0
 orbit_LongOfPericenter = 0
 orbit_MeanLongitude = 120
 
+[rhea]
+name = Rhea
+parent = Saturn 
+radius = 764. 
+halo = true 
+color = 1.,1.,1. 
+tex_map = rhea 
+tex_halo = star16x16 
+lightning = true 
+albedo = 0.79 
+rot_rotation_offset = 318.9 
+rot_obliquity = 0.6 
+#rot_equator_ascending_node = 186.6 
+coord_func = ell_orbit 
+orbit_Epoch = 2451545.0 
+orbit_Period = 4.517503 
+orbit_SemiMajorAxis = 527367 
+orbit_Eccentricity = 0.0010 
+orbit_Inclination = 0.35 
+orbit_AscendingNode = 0 
+orbit_LongOfPericenter = 0 
+orbit_MeanLongitude = 120
+
+[tethys]
+name = Tethys
+parent = Saturn 
+radius = 529.8 
+halo = true 
+color = 1.,1.,1. 
+tex_map = rhea 
+tex_halo = star16x16 
+lightning = true 
+albedo = 0.99 
+rot_rotation_offset = 318.9 
+rot_obliquity = 0.6 
+#rot_equator_ascending_node = 186.6 
+coord_func = ell_orbit 
+orbit_Epoch = 2451545.0 
+orbit_Period = 1.887803 
+orbit_SemiMajorAxis = 294992 
+orbit_Eccentricity = 0.0001 
+orbit_Inclination = 1.09 
+orbit_AscendingNode = 0 
+orbit_LongOfPericenter = 0 
+orbit_MeanLongitude = 120 
 
 [uranus]
 name = Uranus
