Fixed memory leaks thanks to mmgr, changed textures for copyright clarity reason, added new Johan and Rob's landscape "Hurricane"!

--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -94,3 +94,38 @@ ground_angle_shift = -0.1
 fog_alt_angle = 20
 fog_angle_shift = -6
 draw_ground_first = 1
+
+[hurricane]
+name = Hurricane
+type = old_style
+nbsidetex = 8
+tex0 = landscapes/hurricane5
+tex1 = landscapes/hurricane6
+tex2 = landscapes/hurricane7
+tex3 = landscapes/hurricane8
+tex4 = landscapes/hurricane1
+tex5 = landscapes/hurricane2
+tex6 = landscapes/hurricane3
+tex7 = landscapes/hurricane4
+nbside = 8
+side0 = tex0:0:0.005:1:1
+side1 = tex1:0:0.005:1:1
+side2 = tex2:0:0.005:1:1
+side3 = tex3:0:0.005:1:1
+side4 = tex4:0:0.005:1:1
+side5 = tex5:0:0.005:1:1
+side6 = tex6:0:0.005:1:1
+side7 = tex7:0:0.005:1:1
+groundtex = landscapes/hurricaneb
+ground = groundtex:0:0:1:1
+fogtex = fogridge
+fog = fogtex:0:0:1:1
+nb_decor_repeat = 1
+decor_alt_angle = 75
+decor_angle_shift = -17
+decor_angle_rotatez = 0
+ground_angle_shift = -17
+ground_angle_rotatez = 45
+fog_alt_angle = 33
+fog_angle_shift = -6
+draw_ground_first = 1
