Continued french translation.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,3 +11,6 @@ src/observator.cpp
 src/planet.cpp
 src/sky_localizer.cpp
 src/stel_ui.cpp
+src/stel_ui_conf.cpp
+src/solarsystem.cpp
+src/stel_core.cpp
