makefile for chinese constellations

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,5 +1,5 @@
 man_MANS = stellarium.1
 pkgdatadir = $(datadir)/@PACKAGE@/data
-pkgdata_DATA = icon.bmp star_names.haw.fab landscapes.ini planet_names.por.fab planet_names.eng.fab planet_names.esl.fab planet_names.dut.fab skycultures.fab stellarium.ico planet_names.fra.fab spacefont.txt zone.tab courierfont.txt planet_names.haw.fab ssystem.ini star_names.eng.fab files_format.txt messier.fab star_names.esl.fab hipparcos.fab name.fab star_names.fra.fab
+pkgdata_DATA = icon.bmp star_names.haw.fab landscapes.ini planet_names.por.fab planet_names.eng.fab planet_names.esl.fab planet_names.dut.fab skycultures.fab stellarium.ico planet_names.fra.fab spacefont.txt zone.tab courierfont.txt planet_names.haw.fab ssystem.ini star_names.eng.fab files_format.txt messier.fab hipparcos.fab name.fab
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
 SUBDIRS = sky_cultures
