--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,5 +1,37 @@
 man_MANS = stellarium.1
 pkgdatadir = $(datadir)/@PACKAGE@/data
-pkgdata_DATA = icon.bmp star_names.haw.fab landscapes.ini planet_names.por.fab planet_names.eng.fab planet_names.esl.fab planet_names.dut.fab skycultures.fab stellarium.ico planet_names.fra.fab spacefont.txt zone.tab courierfont.txt planet_names.haw.fab ssystem.ini star_names.eng.fab files_format.txt messier.fab hipparcos.fab name.fab
+pkgdata_DATA = \
+icon.bmp \
+stellarium.ico \
+cardinals.dut.fab \
+cardinals.eng.fab \
+cardinals.esl.fab \
+cardinals.fra.fab \
+planet_names.eng.fab \
+planet_names.esl.fab \
+planet_names.deu.fab \
+planet_names.dut.fab \
+planet_names.fra.fab \
+planet_names.haw.fab \
+planet_names.ita.fab \
+planet_names.por.fab \
+star_names.eng.fab \
+star_names.haw.fab \
+script_load_config \
+script_set_time_zone \
+script_set_locale \
+script_save_config \
+landscapes.ini \
+ssystem.ini \
+courierfont.txt \
+spacefont.txt \
+messier.fab \
+name.fab \
+skycultures.fab \
+files_format.txt \
+zone.tab \
+hipparcos.fab \
+name.txt \
+skylanguages.fab
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
 SUBDIRS = sky_cultures scripts
