Added axis tilt for sun rotation

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -12,8 +12,8 @@ coord_func = sun_special
 lightning = false
 albedo = -1.
 rot_periode = 654.61
-#rot_obliquity = 7.25
-#rot_equator_ascending_node = 286.13
+rot_obliquity = 7.25
+rot_equator_ascending_node = 286.13
 
 [mercury]
 name = Mercury
