Added new landscape.

--- a/data/landscapes.ini
+++ b/data/landscapes.ini
@@ -73,3 +73,37 @@ ground_angle_rotatez = 45
 fog_alt_angle = 33
 fog_angle_shift = -6
 draw_ground_first = 1
+
+[HogeRielen]
+name = HogeRielen
+type = old_style
+nbsidetex = 7
+tex0 = landscapes/HR7
+tex1 = landscapes/HR6
+tex2 = landscapes/HR5
+tex3 = landscapes/HR4
+tex4 = landscapes/HR3
+tex5 = landscapes/HR2
+tex6 = landscapes/HR1
+nbside = 7
+side0 = tex0:0:0.005:1:1
+side1 = tex1:0:0.005:1:1
+side2 = tex2:0:0.005:1:1
+side3 = tex3:0:0.005:1:1
+side4 = tex4:0:0.005:1:1
+side5 = tex5:0:0.005:1:1
+side6 = tex6:0:0.005:1:1
+side7 = tex7:0:0.005:1:1
+groundtex = landscapes/HRb
+ground = groundtex:0:0:1:1
+fogtex = fog
+fog = fogtex:0:0:1:1
+nb_decor_repeat = 1
+decor_alt_angle = 90
+decor_angle_shift = -25
+decor_angle_rotatez = 0
+ground_angle_shift = -24
+ground_angle_rotatez = 45
+fog_alt_angle = 0
+fog_angle_shift = 0
+draw_ground_first = 1
