--- a/textures/constellation-art/Makefile.am
+++ b/textures/constellation-art/Makefile.am
@@ -1,3 +1,19 @@
 pkgdatadir = $(datadir)/@PACKAGE@/textures/constellation-art
-pkgdata_DATA = $(wildcard *.png)
+pkgdata_DATA = andromeda.png       cassiopeia.png        equuleus.png   lyra.png reticulum.png \
+antlia.png          centaurus.png         eridanus.png   mensa.png             sagitta.png \
+apus.png            cepheus.png           fornax.png     microscopium.png      sagittarius.png \
+aquarius.png        cetus.png             gemini.png     monoceros.png         scorpius.png \
+aquila.png          chamaeleon.png        grus.png       musca.png             sculptor.png \
+ara.png             circinus.png          hercules.png   norma.png             scutum.png \
+argonavis.png       columba.png           horlogium.png  octans.png            sextans.png \
+aries.png           coma-berenices.png    hydra.png      ophiuchus.png         taurus.png \
+auriga.png          corona-australis.png  hydrus.png     orion.png             telescopium.png \
+bootes.png          corona-borealis.png   indus.png      pavo.png              triangulum-australe.png \
+caelum.png          corvus.png            lacerta.png    pegasus.png           triangulum.png \
+camelopardalis.png  crater.png            leo-minor.png  perseus.png           tucana.png \
+cancer.png          crux.png              leo.png        phoenix.png           ursa-major.png \
+canes-venatici.png  cygnus.png            lepus.png      pictor.png            ursa-minor.png \
+canis-major.png     delphinus.png         libra.png      pisces.png            virgo.png \
+canis-minor.png     dorado.png            lupus.png      piscis-austrinus.png  volans.png \
+capricornus.png     draco.png             lynx.png       pyxis.png             vulpecula.png
 EXTRA_DIST = $(pkgdata_DATA)
