--- a/data/scripts/Makefile.am
+++ b/data/scripts/Makefile.am
@@ -1,3 +1,3 @@
 pkgdatadir = $(datadir)/@PACKAGE@/data/scripts
-pkgdata_DATA = $(wildcard *.sts)
+pkgdata_DATA = lunar_eclipse_partial.sts lunar_eclipse_total.sts startup.sts
 EXTRA_DIST = $(pkgdata_DATA)
