Applied patches from matthewg42 adding ESC key to close windows, fixing make install. Applied patches from eikland adding Norway support.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -32,6 +32,8 @@ files_format.txt \
 zone.tab \
 hipparcos.fab \
 name.txt \
-skylanguages.fab
+skylanguages.fab \
+cities.fab \
+arial.txt
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
 SUBDIRS = sky_cultures scripts
