Added great patch by Johannes Gajdosik adding Saturnian satellite.

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -237,6 +237,78 @@ rot_obliquity = 28.049
 lightning = true
 sidereal_period = 10760
 
+
+[mimas]
+name = Mimas
+parent = Saturn
+radius = 198.6
+halo = true
+color = 0.75,0.63,0.58
+tex_map = mimas
+tex_halo = star16x16
+lightning = true
+albedo = 0.5
+rot_rotation_offset = 190.7
+rot_obliquity = 1.5
+#rot_equator_ascending_node = 137.8
+coord_func = mimas_special
+
+[enceladus]
+name = Enceladus
+parent = Saturn
+radius = 249.4
+halo = true
+color = 1.,0.9,0.75
+tex_map = enceladus
+tex_halo = star16x16
+lightning = true
+albedo = 0.99
+rot_rotation_offset = 322.9
+rot_obliquity = 0.0
+coord_func = enceladus_special
+
+[tethys]
+name = Tethys
+parent = Saturn
+radius = 529.9
+halo = true
+color = 1.,0.9,0.75
+tex_map = tethys
+tex_halo = star16x16
+lightning = true
+albedo = 0.9
+rot_rotation_offset = 330.6
+rot_obliquity = 0.0
+coord_func = tethys_special
+
+[dione]
+name = Dione
+parent = Saturn
+radius = 559.
+halo = true
+color = 1.,0.9,0.75
+tex_map = dione
+tex_halo = star16x16
+lightning = true
+albedo = 0.7
+rot_rotation_offset = 317.1
+rot_obliquity = 0.0
+coord_func = dione_special
+
+[rhea]
+name = Rhea
+parent = Saturn
+radius = 764.
+halo = true
+color = 1.,0.9,0.75
+tex_map = rhea
+tex_halo = star16x16
+lightning = true
+albedo = 0.7
+rot_rotation_offset = 195.0
+rot_obliquity = 0.0
+coord_func = rhea_special
+
 [titan]
 name = Titan
 parent = Saturn
@@ -250,61 +322,40 @@ albedo = 0.21
 rot_rotation_offset = 318.9
 rot_obliquity = 0.6
 #rot_equator_ascending_node = 186.6
-coord_func = ell_orbit
-orbit_Epoch = 2451545.0
-orbit_Period = 15.945421
-orbit_SemiMajorAxis = 1221850
-orbit_Eccentricity = 0.0292
-orbit_Inclination = 0.33
-orbit_AscendingNode = 0
-orbit_LongOfPericenter = 0
-orbit_MeanLongitude = 120
+coord_func = titan_special
 
-[rhea]
-name = Rhea
-parent = Saturn 
-radius = 764. 
-halo = true 
-color = 1.,1.,1. 
-tex_map = rhea 
-tex_halo = star16x16 
-lightning = true 
-albedo = 0.79 
-rot_rotation_offset = 318.9 
-rot_obliquity = 0.6 
-#rot_equator_ascending_node = 186.6 
-coord_func = ell_orbit 
-orbit_Epoch = 2451545.0 
-orbit_Period = 4.517503 
-orbit_SemiMajorAxis = 527367 
-orbit_Eccentricity = 0.0010 
-orbit_Inclination = 0.35 
-orbit_AscendingNode = 0 
-orbit_LongOfPericenter = 0 
-orbit_MeanLongitude = 120
+[hyperion]
+name = Hyperion
+parent = Saturn
+radius = 171.
+halo = true
+color = 1.,0.9,0.75
+tex_map = hyperion
+tex_halo = star16x16
+lightning = true
+albedo = 0.3
+rot_rotation_offset = 318.9
+rot_obliquity = 61.
+#rot_equator_ascending_node = 145
+#RotationPeriod = 120
+#PrecessionRate = 51.43
+coord_func = hyperion_special
 
-[tethys]
-name = Tethys
-parent = Saturn 
-radius = 529.8 
-halo = true 
-color = 1.,1.,1. 
-tex_map = rhea 
-tex_halo = star16x16 
-lightning = true 
-albedo = 0.99 
-rot_rotation_offset = 318.9 
-rot_obliquity = 0.6 
-#rot_equator_ascending_node = 186.6 
-coord_func = ell_orbit 
-orbit_Epoch = 2451545.0 
-orbit_Period = 1.887803 
-orbit_SemiMajorAxis = 294992 
-orbit_Eccentricity = 0.0001 
-orbit_Inclination = 1.09 
-orbit_AscendingNode = 0 
-orbit_LongOfPericenter = 0 
-orbit_MeanLongitude = 120 
+[iapetus]
+name = Iapetus
+parent = Saturn
+radius = 718.
+halo = true
+color = 1.,0.9,0.75
+tex_map = iapetus
+tex_halo = star16x16
+lightning = true
+albedo = 0.2
+rot_rotation_offset = 14.9
+rot_obliquity = 15.5
+#rot_equator_ascending_node = 213.7
+coord_func = iapetus_special
+
 
 [uranus]
 name = Uranus
