--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -17,7 +17,7 @@ rot_equator_ascending_node = 196.13
 
 [mercury]
 name = Mercury
-parent = Sun
+parent = sun
 radius = 2439.7
 halo = true
 color = 0.9,0.8,0.8
@@ -34,7 +34,7 @@ sidereal_period = 87.97
 
 [venus]
 name = Venus
-parent = Sun
+parent = sun
 radius = 6052.
 halo = true
 color = 1.,1.,0.8
@@ -51,7 +51,7 @@ sidereal_period = 224.70
 
 [earth]
 name = Earth
-parent = Sun
+parent = sun
 radius = 6378.1
 halo = true
 color = 0.7,0.8,1.2
@@ -66,7 +66,7 @@ rot_obliquity = 23.438855
 
 [moon]
 name = Moon
-parent = Earth
+parent = earth
 radius = 1738.
 halo = false
 color = 1.,1.,1.
@@ -81,7 +81,7 @@ rot_obliquity = -23.45
 
 [mars]
 name = Mars
-parent = Sun
+parent = sun
 radius = 3394.
 halo = true
 color = 1.2,0.7,0.7
@@ -97,7 +97,7 @@ sidereal_period = 686.98
 
 [phobos]
 name = Phobos
-parent = Mars
+parent = mars
 radius = 22.2
 halo = true 
 color = 1.,1.,1. 
@@ -120,7 +120,7 @@ orbit_MeanLongitude = 317.724
 
 [deimos] 
 name = Deimos 
-parent = Mars 
+parent = mars 
 radius = 12.6 
 halo = true 
 color = 1.,1.,1. 
@@ -143,7 +143,7 @@ orbit_MeanLongitude = 120
 
 [jupiter]
 name = Jupiter
-parent = Sun
+parent = sun
 radius = 71398.
 halo = true
 color = 0.8,0.9,1.0
@@ -160,7 +160,7 @@ sidereal_period = 4331.87
 
 [io]
 name = Io
-parent = Jupiter
+parent = jupiter
 radius = 1821.
 halo = true
 color = 1.,.8,.7
@@ -174,7 +174,7 @@ coord_func = io_special
 
 [europa]
 name = Europa
-parent = Jupiter
+parent = jupiter
 radius = 1565.
 halo = true
 color = 1.,1.,1.
@@ -188,7 +188,7 @@ coord_func = europa_special
 
 [ganymede]
 name = Ganymede
-parent = Jupiter
+parent = jupiter
 radius = 2634.
 halo = true
 color = 1.,1.,1.
@@ -203,7 +203,7 @@ coord_func = ganymede_special
 
 [callisto]
 name = Callisto
-parent = Jupiter
+parent = jupiter
 radius = 2403.
 halo = true
 color = 1.,1.,1.
@@ -218,7 +218,7 @@ coord_func = calisto_special
 
 [saturn]
 name = Saturn
-parent = Sun
+parent = sun
 radius = 60330.
 halo = true
 color = 1.,1.,0.85
@@ -240,7 +240,7 @@ sidereal_period = 10760
 
 [mimas]
 name = Mimas
-parent = Saturn
+parent = saturn
 radius = 198.6
 halo = true
 color = 0.75,0.63,0.58
@@ -255,7 +255,7 @@ coord_func = mimas_special
 
 [enceladus]
 name = Enceladus
-parent = Saturn
+parent = saturn
 radius = 249.4
 halo = true
 color = 1.,0.9,0.75
@@ -269,7 +269,7 @@ coord_func = enceladus_special
 
 [tethys]
 name = Tethys
-parent = Saturn
+parent = saturn
 radius = 529.9
 halo = true
 color = 1.,0.9,0.75
@@ -283,7 +283,7 @@ coord_func = tethys_special
 
 [dione]
 name = Dione
-parent = Saturn
+parent = saturn
 radius = 559.
 halo = true
 color = 1.,0.9,0.75
@@ -297,7 +297,7 @@ coord_func = dione_special
 
 [rhea]
 name = Rhea
-parent = Saturn
+parent = saturn
 radius = 764.
 halo = true
 color = 1.,0.9,0.75
@@ -311,7 +311,7 @@ coord_func = rhea_special
 
 [titan]
 name = Titan
-parent = Saturn
+parent = saturn
 radius = 2575.
 halo = true
 color = 1.,0.9,0.75
@@ -326,7 +326,7 @@ coord_func = titan_special
 
 [hyperion]
 name = Hyperion
-parent = Saturn
+parent = saturn
 radius = 171.
 halo = true
 color = 1.,0.9,0.75
@@ -343,7 +343,7 @@ coord_func = hyperion_special
 
 [iapetus]
 name = Iapetus
-parent = Saturn
+parent = saturn
 radius = 718.
 halo = true
 color = 1.,0.9,0.75
@@ -359,7 +359,7 @@ coord_func = iapetus_special
 
 [uranus]
 name = Uranus
-parent = Sun
+parent = sun
 radius = 26200.
 halo = true
 color = 0.75,0.95,1.
@@ -376,7 +376,7 @@ sidereal_period = 30685
 
 [neptune]
 name = Neptune
-parent = Sun
+parent = sun
 radius = 25225.
 halo = true
 color = 0.75,0.75,1.
@@ -394,7 +394,7 @@ sidereal_period = 60189
 
 [pluto]
 name = Pluto
-parent = Sun
+parent = sun
 radius = 1137.
 halo = true
 color = 1.,1.,1.
@@ -411,7 +411,7 @@ sidereal_period = 90797
 
 [charon]
 name = Charon
-parent = Pluto
+parent = pluto
 radius = 586.
 halo = true
 color = 1.,1.,1.
