Now use gettext to translate planets/cardinal points/constellations names.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,39 +1,12 @@
 man_MANS = stellarium.1
 pkgdatadir = $(datadir)/@PACKAGE@/data
-pkgdata_DATA = \
-icon.bmp \
-stellarium.ico \
-cardinals.dut.fab \
-cardinals.eng.fab \
-cardinals.esl.fab \
-cardinals.fra.fab \
-planet_names.eng.fab \
-planet_names.esl.fab \
-planet_names.deu.fab \
-planet_names.dut.fab \
-planet_names.fra.fab \
-planet_names.haw.fab \
-planet_names.ita.fab \
-planet_names.por.fab \
-star_names.eng.fab \
-star_names.haw.fab \
-script_load_config \
-script_set_time_zone \
-script_set_locale \
-script_save_config \
-landscapes.ini \
-ssystem.ini \
-courierfont.txt \
-spacefont.txt \
-messier.fab \
-name.fab \
-skycultures.fab \
-files_format.txt \
-zone.tab \
-hipparcos.fab \
-name.txt \
-skylanguages.fab \
-cities.fab \
-arial.txt
+pkgdata_DATA = icon.bmp stellarium.ico cardinals.dut.fab cardinals.eng.fab \
+	cardinals.esl.fab cardinals.fra.fab planet_names.eng.fab planet_names.esl.fab \
+	planet_names.deu.fab planet_names.dut.fab planet_names.fra.fab planet_names.haw.fab \
+	planet_names.ita.fab planet_names.por.fab star_names.eng.fab star_names.haw.fab \
+	script_load_config script_set_time_zone script_set_locale script_save_config \
+	landscapes.ini ssystem.ini courierfont.txt spacefont.txt messier.fab name.fab \
+	skycultures.fab files_format.txt zone.tab hipparcos.fab name.txt skylanguages.fab \
+	cities.fab arial.txt DejaVuSans.ttf
 EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
 SUBDIRS = sky_cultures scripts
