--- a/data/sky_cultures/western/Makefile.am
+++ b/data/sky_cultures/western/Makefile.am
@@ -1,3 +1,3 @@
 pkgdatadir = $(datadir)/@PACKAGE@/data/sky_cultures/western
-pkgdata_DATA = constellation_names.eng.fab constellation_names.fra.fab constellation_names.haw.fab constellation_names.dut.fab constellationship.fab constellation_names.esl.fab constellationsart.fab constellation_names.deu.fab constellation_names.ita.fab  constellation_names.por.fab
+pkgdata_DATA = constellation_names.eng.fab constellationship.fab constellationsart.fab
 EXTRA_DIST = $(pkgdata_DATA)
