--- a/data/sky_cultures/western/Makefile.am
+++ b/data/sky_cultures/western/Makefile.am
@@ -1,3 +1,4 @@
 pkgdatadir = $(datadir)/@PACKAGE@/data/sky_cultures/western
-pkgdata_DATA = constellation_names.eng.fab constellationship.fab constellationsart.fab
+pkgdata_DATA = constellation_names.eng.fab constellationship.fab \
+	constellationsart.fab boundaries.dat
 EXTRA_DIST = $(pkgdata_DATA)
