Cleaned and deactivated non-portable hard-coded locale features.

--- a/data/ssystem.ini
+++ b/data/ssystem.ini
@@ -62,7 +62,7 @@ lightning = true
 albedo = 0.3
 rot_periode = 23.9344694
 rot_rotation_offset = 280.5
-rot_obliquity = 23.438855
+rot_obliquity = -23.438855
 
 [moon]
 name = Moon
@@ -233,7 +233,7 @@ albedo = 0.50
 rot_periode = 10.65622
 rot_rotation_offset = 358.922
 rot_obliquity = 28.049
-#rot_equator_ascending_node = 169.530
+rot_equator_ascending_node = 169.5291
 lightning = true
 sidereal_period = 10760
 
